--- a/Interview/6-mysql/6.Mysql.ipynb
+++ b/Interview/6-mysql/6.Mysql.ipynb
@@ -355,6 +355,16 @@
    "source": [
     "### 16. 聊聊 MySQL 备份方式？备份策略是怎么样的？"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17. Mysql Join实现\n",
+    "join有三种算法，分别是Nested Loop Join，Hash join，Sort Merge Join。MySQL官方文档中提到，**MySQL只支持Nested Loop Join**这一种join algorithm\n",
+    "[https://blog.csdn.net/orangleliu/article/details/72850659](https://blog.csdn.net/orangleliu/article/details/72850659)   \n",
+    "文中不仅讲解了最简单的SNLJ, 还讲解了join key是索引时, 使用INLJ, 非索引时使用缓存的BNLJ.  此外对比了Hash join, 这种BNLJ的进化版(虽然mysql不支持), 从双循环的SNLJ, 进化到BNLJ, 缓存外侧join的记录, 到hash join的进化, 都是在尽量减少内侧循环(内表)的全表扫描次数. 这也解释了sort merge join内表外表都只扫描一次的大数据解决方案"
+   ]
   }
  ],
  "metadata": {
