--- a/Interview/hive.ipynb
+++ b/Interview/hive.ipynb
@@ -29,23 +29,26 @@
     "  ```\n",
     "  total_input_size : 输入文件的总大小   \n",
     "  dfs.block.size : hdfs一个block块的大小  \n",
-    "  default_mapper_num : 为2个参数的差\n",
+    "  default_mapper_num : 为2个参数的商\n",
     "  ```\n",
     "* `splitNumber` : 通过把一个block块划分多个split, 每个mapper处理一个split的方式计算mapper个数   \n",
     "  ```\n",
     "  mapred.min.split.size : split的最小size（默认值1B）\n",
     "  mapred.max.split.size : split的最大size（默认值64MB) \n",
     "  split_size = max(mapred.min.split.size, min(mapred.max.split.size, dfs.block.size))；   \n",
-    "  因此, 只有把mapred.min.split.size的值设置的比dfs.block.size大, 才能达到1个mapper读取大于1个block块的目的\n",
-    "        只有把mapred.max.split.size设置的比dfs.block.size小, 才能达到1个block块被多个mapper处理的目的   \n",
+    "  \n",
     "  split_num = total_input_size / split_size \n",
     "  ```\n",
     "  \n",
+    "因此: \n",
+    "* 只有把mapred.min.split.size的值设置的比dfs.block.size大, 才能达到1个mapper读取大于1个block块的目的\n",
+    "* 只有把mapred.max.split.size设置的比dfs.block.size小, 才能达到1个block块被多个mapper处理的目的   \n",
+    "\n",
     "最终得到mapper的个数计算公式为:    \n",
-    "```\n",
-    "mapper_num = MIN(split_num,   \n",
-    "                 MAX(default_mapper_num, mapred.map.tasks))\n",
-    "```\n",
+    "$$\n",
+    "mapper\\_num = MIN(split\\_num, MAX(default\\_mapper\\_num, mapred.map.tasks))\n",
+    "$$\n",
+    "由于 `mapred.max.split.size`默认为64M, 所以Hive每个map任务默认处理64M的数据(1个split)\n",
     "\n",
     "#### 3. 如何调整reduce个数   \n",
     "reducer的个数, 决定了job最后生成的文件个数, 这个数可以被用户直接指定; 若没有指定, hive会通过一个公司计算出来   \n",
@@ -95,7 +98,7 @@
     "  而count(distinct) 计算全都压倒reduer, 把key分散到reducer后还要在每个reducer上对key进行排序去重\n",
     "  ```\n",
     "* **3. 对于order by 语法的优化**  \n",
-    "   order by是全局排序, 只会生成1个reducer来处理所有mapper的输出. 因此可以使用一个不在order by中的字段进行distributed by, 再把原order by中的条件放入到sort by中 \n",
+    "   order by是全局排序, 只会生成1个reducer来处理所有mapper的输出. 但是往往我们并不需要在某个字段上完全的全局有序, 而是希望局部上有序, 所以可是使用其他字段先进行`distribute by`,再在原字段上`sort by` \n",
     "   \n",
     "```sql\n",
     "select uid,upload_time,event_type,record_data f\n",
@@ -113,11 +116,34 @@
     "```\n",
     "\n",
     "* **4. 对于join语法的优化**\n",
-    "  \n",
-    "  [https://www.cnblogs.com/ljhdo/p/4519128.html](https://www.cnblogs.com/ljhdo/p/4519128.html)  \n",
-    "  [https://blog.csdn.net/u012036736/article/details/84978689](https://blog.csdn.net/u012036736/article/details/84978689)  \n",
-    "  [https://blog.csdn.net/qq_26442553/article/details/80865014](https://blog.csdn.net/qq_26442553/article/details/80865014)\n",
-    "  \n",
+    "    1. 使用`map join`  \n",
+    "       当使用join时, 如果发现其中某个表很小, 可以完全放进内存的时候, 就可以将这张表指定成`map join`分发的表. 有2中方法指定\n",
+    "        1. 手动指定: \n",
+    "        ```sql\n",
+    "        select /*+MAPJOIN(b)*/ a.a1,a.a2,b.b2 from tablea a JOIN tableb b ON a.a1=b.b1\n",
+    "        ```\n",
+    "        \n",
+    "         缓存多张小表:\n",
+    "         \n",
+    "        ```\n",
+    "        select /*+MAPJOIN(b,c)*/ a.a1,a.a2,b.b2 \n",
+    "           from tablea a \n",
+    "        JOIN tableb b \n",
+    "        ON a.a1=b.b1 \n",
+    "        JOIN tbalec c \n",
+    "        on a.a1=c.c1\n",
+    "        ```\n",
+    "        2. 在Hive0.11后，Hive默认启动该优化  \n",
+    "           可以通过以下两个属性来设置该优化的触发时机\n",
+    "            1. `hive.auto.convert.join`: 默认值为true，自动开户MAPJOIN优化\n",
+    "            2. `hive.mapjoin.smalltable.filesize`: 默认值为2500000(25M), 如果表的大小小于此值就会被加载进内存中  \n",
+    "            \n",
+    "       此外, 使用使用MAPJOIN时，需要注意：\n",
+    "            * LEFT OUTER JOIN的左表必须是大表；\n",
+    "            * RIGHT OUTER JOIN的右表必须是大表；\n",
+    "            \n",
+    "    2. 调整map个数和reduce个数\n",
+    "\n",
     "#### 7. 内部表和外部表? \n",
     "内部表数据由Hive自身管理，外部表数据由HDFS管理；删除内部表会直接删除元数据（metadata）及存储数据；删除外部表仅仅会删除元数据，HDFS上的文件并不会被删除。\n",
     "\n",
@@ -127,13 +153,6 @@
     "* 分桶表：表和分区也可以进一步被划分为桶，分桶是相对分区进行更细粒度的划分。分桶将整个数据内容按照某列属性值的hash值进行区分，不同的桶对应不同的文件。\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
