--- a/Spark/spark shuffle理解.ipynb
+++ b/Spark/spark shuffle理解.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 二. 三种shuffle writer的过程 \n",
+    "## 二. 3种shuffle writer的过程 \n",
     "#### 前言\n",
     "* 以下三个类， 全都是ShuffleWriter的子类， 这些子类的write()方法用于执行shuffle write。\n",
     "* ShuffleMapTask的runTask()表示任务的执行, 方法内部会根据情况选择一种ShuffleWriter执行shuffle write操作; shuffle write操作的本质是当算子计算出一个内存集合后, 将这个内存集合写到一个提供将数据\"分区,排序,合并,聚合\"的数据结构中. 这个数据结构在SortShuffleWriter实现中, 表现为`PartitionedAppendOnlyMap`和`PartitionedPairBuffer`     \n",
@@ -59,11 +59,12 @@
     "\n",
     "### 2.1 BypassMergeSortShuffleWriter   \n",
     "1. BypassMergeSortShuffleWriter**实现过程**   \n",
-    "    因为, BypassMergeSortShuffleWriter大体实现过程是: 首先为每个分区创建一个分区文件, 将对应的数据写入到各自的分区文件中; 最终合并所有的分区文件形成一个大文件, 且伴随产生一个索引文件记录分区的开始位置和结束位置. 因为这种shuffle不需要进行排序和combine等操作, 因此不会十分消耗内存.\n",
+    "    * BypassMergeSortShuffleWriter大体实现过程是: 首先为每个分区创建一个分区文件, 将对应的数据写入到各自的分区文件中; 最终合并所有的分区文件形成一个大文件, 且伴随产生一个索引文件记录分区的开始位置和结束位置. 因为这种shuffle不需要进行排序和combine等操作, 因此不会十分消耗内存.\n",
+    "    * BypassMergeSortShuffle磁盘写机制其实跟已经被废弃的第一版HashShuffle是一模一样的, 所以都要创建数量惊人的磁盘文件，只是在最后会做一个磁盘文件的合并而已。因此少量的最终磁盘文件，也让该机制相对第一版的的HashShuffleManager来说，shuffle read的性能会更好。\n",
     "  \n",
     "       \n",
     "2. BypassMergeSortShuffleWriter的**触发条件**有2个: \n",
-    "    1. map task的数量不多: 小于`spark.shuffle.sort.bypassMergeThreshold`值, 默认为200\n",
+    "    1. reduce分区的数量不多: 小于`spark.shuffle.sort.bypassMergeThreshold`值, 默认为200\n",
     "    2. 非map端聚合的算子: 比如`reduceByKey`就不能使用bypasssertshuffle.\n",
     "    \n",
     "    \n",
@@ -134,6 +135,7 @@
     "* 最后, 进入ExternalSorter的方法, 查看其内部检查是否需要spill的逻辑\n",
     "    1. 首先需要得到当前map/buffer的估计内存占用大小: estimatedSize = buffer.estimateSize()\n",
     "    2. 其次还要看本次是否需要检查spill: maybeSpill(buffer, estimatedSize)\n",
+    "\n",
     "```scala\n",
     "/**\n",
     "   * Spill the current in-memory collection to disk if needed.\n",
@@ -154,7 +156,7 @@
     "      (1) n是指数增加的, n每次更新成n*1.1, n的初始值是1. 使用n的时候会取n的上界(Math.ceil)\n",
     "      (2) bytesPerUpdate = (上次抽样时集合的大小-上上次抽样时集合的大小) / (者两次抽样插入recorder数量之差)\n",
     "         bytesPerUpdate的估算值只和前两次抽样有关. \n",
-    "      (3) 计算一个集合的大小, 在SizeEstimator.estimate()中, 主要是通过遍历集合单个元素后累加得来的. \n",
+    "      (3) 计算一个sample集合的大小, 实现在SizeEstimator.estimate()中, 主要是通过遍历sample集合单个元素后累加得来的. \n",
     "         spark对单个对象内存占用的计算, 不仅会包含对象本身, 也包含对象应用的对象, 其引用的引用对象等等.\n",
     "      (4) 最终, estimatedSize = bytesPerUpdate * (本次和上次更新的recorder差) + 上次抽样时的集合大小\n",
     "      */\n",
@@ -210,7 +212,7 @@
    "source": [
     "### 三. Shuffle Read的过程\n",
     "* **过程**:  \n",
-    "  shuffle read主要完成数据获取和对数据的spill ,combine, merge操作. 数据获取又分为直接从本地获取和从远端拉取.如果是从远端拉取, 需要在拉去的同时spill小文件, 最后进行combine, merge文件的操作.\n",
+    "  shuffle read主要完成数据获取和对数据的spill ,combine, merge操作. 数据获取又分为直接从本地获取和从远端拉取.如果是从远端拉取, 需要在拉去的同时spill小文件, 最后进行combine, merge文件的操作. combine的操作仍然使用`ExternalSorter`执行\n",
     "* **一般不会OOM**  \n",
     "  shuffle read阶段由于没有估算, 检查的问题, 所以一般不会出现OOM. 都会保持好内存使用在`ExecutorHeapMemeory * 0.2 * 0.8` 之内"
    ]
@@ -228,6 +230,30 @@
     " \n",
     "* **3. spill不及时**  \n",
     "Spark 目前采用的是抽样统计的方式来计算 MemoryConsumer 已经使用的内存，从而造成堆内内存的实际使用量不是特别准确。从而有可能因为不能及时 Spill 而导致 OOM。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 影响Shuffle的一些参数\n",
+    "\n",
+    "#### 1. 从增大shuffle read, shuffle write缓冲角度\n",
+    "* **spark.shuffle.file.buffer**: 32k   \n",
+    "    * shuffle write过程中, 当需要把`PartitionedAppendOnlyMap`中的数据spill到磁盘时, 需要先把数据写到内存缓冲中, 然后进行系统调用写到磁盘; 适当增大这个数值（比如64k）可以减小系统调用次数提升性能  \n",
+    "    * 在实践中发现，合理调节该参数，性能会有1%~5%的提升。\n",
+    "    \n",
+    "* **spark.reducer.maxSizeInFlight**: 48M\n",
+    "    * 该参数用于设置shuffle read task的buffer缓冲大小，而这个buffer缓冲决定了每次能够拉取多少数据。如果作业可用的内存资源较为充足的话，可以适当增加这个参数的大小（比如96m），从而减少拉取数据的次数，也就可以减少网络传输的次数，进而提升性能。\n",
+    "\n",
+    "\n",
+    "#### 2. 从增大shuffle拉取网络稳定性的角度\n",
+    "* **spark.shuffle.io.maxRetries**: 3\n",
+    "    * shuffle read task从shuffle write task所在节点拉取属于自己的数据时，如果因为网络异常导致拉取失败，是会自动进行重试的。该参数就代表了可以重试的最大次数。如果在指定次数之内拉取还是没有成功，就可能会导致作业执行失败。   \n",
+    "    * 调优建议：对于那些包含了特别耗时的shuffle操作的作业，建议增加重试最大次数（比如60次），以避免由于JVM的full gc或者网络不稳定等因素导致的数据拉取失败。在实践中发现，对于针对超大数据量（数十亿~上百亿）的shuffle过程，调节该参数可以大幅度提升稳定性。\n",
+    "* **spark.shuffle.io.retryWait**：5s\n",
+    "    * 参数说明：具体解释同上，该参数代表了每次重试拉取数据的等待间隔，默认是5s。\n",
+    "    * 调优建议：建议加大间隔时长（比如60s），以增加shuffle操作的稳定性。"
    ]
   }
  ],
