--- a/Spark/spark面试题.ipynb
+++ b/Spark/spark面试题.ipynb
@@ -28,7 +28,9 @@
     "#### 4. cache和persist的区别？\n",
     "它们都是用来进行缓存RDD的。\n",
     "* cache是特定的persist，rdd中cache的缓存级别是MEMORY_ONLY，cache调用了persist；\n",
-    "* persist可以设置不同的缓存级别。  \n",
+    "* persist可以设置不同的缓存级别。 \n",
+    "* cache和persist, checkponit都是懒计算的, 需要执行action算子时才真正触发执行动作;   \n",
+    "  因此需要在cache(), checkpint()后面加上类似`foreach(_ => Unit)`的算子进行触发\n",
     "\n",
     "一共有几种缓存级别\n",
     "* MEMORY_ONLY：数据保存在内存中，如果内存不够，数据可能就不会持久化；\n",
@@ -105,7 +107,8 @@
     "      \n",
     "      \n",
     "* **如果是1个非常非常大的key导致的数据倾斜**  \n",
-    "    * 可以将这个key拿出来单独处理, 给这个key加上随机前缀, 打散这个key"
+    "    * 可以将这个key拿出来单独处理, 给这个key加上随机前缀, 打散这个key\n",
+    "    * 或者把这些倾斜的key过滤出来后的RDD或DataFrame广播出去, 让其进行map端的聚合"
    ]
   },
   {
