--- a/Java Parallel program/Java并发编程实践/14-条件等待-Condition和AQS.ipynb
+++ b/Java Parallel program/Java并发编程实践/14-条件等待-Condition和AQS.ipynb
@@ -158,21 +158,145 @@
     "      当队列为空时, take()挂起并等待notEmpty, 此时put()向notEmpty发送信号, 解除阻塞在take()中的线程   <img src=\"img/aqs21.png\" width=\"83%\">\n",
     "    * 使用多个Condition时, 比分析一个使用单一内部队列加多个条件谓词的类简单的多. 通过把条件谓词分开并放入到2个等待线程集合中, Condition更容易满足单次通知的需求. signal()比signalAll()更高效, 它能极大的减少每次唤醒操作产生的上写文切换和锁请求次数\n",
     "    \n",
-    "#### 3.2 RentrantLock和Semaphore的共性"
+    "#### 3.2 RentrantLock和Semaphore的共性\n",
+    "`RentrantLock`和`Semaphore`有很多共性:\n",
+    "* 它们都可以作为一个阀门, 每次只允许一定数量的线程通过, 并且当线程到达阀门时可以有不同状态: \n",
+    "    * 可以通过(调用`lock()`或`acquire()`时成功返回)\n",
+    "    * 可以等待(调用`lock()`或`acquire()`时阻塞)\n",
+    "    * 可以取消(调用`tryLock(timeout)`或`tryAcquire(timeout)`时返回false, 表示指定时间内锁时不可用或者无法获得许可的)\n",
+    "* 两个接口都支持可中断, 不可中断, 限时的获取操作  \n",
+    "* 也都支持线程执行公平或非公平等待\n",
+    "\n",
+    "虽然他们不是利用对方实现的, 但仍可以通过锁实现信号量.事实上他们在实现时使用了一个共同的基类`AbstractQueuedSynchronizer`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 二. 如何使用AbstractQueuedSynchronizer构建同步类\n",
-    "<img src=\"img/aqsdemo.png\" width=\"65%\">\n",
-    "1. `boolean tryAcquire(int arg)`\n",
-    "2. `boolean tryRelease(int arg)`\n",
+    "### 四. 如何使用AbstractQueuedSynchronizer构建同步类\n",
+    "#### 1. 获取与释放: \n",
+    "基于`AbstractQueuedSynchronizer`构建的同步类, 基本操作包括各种形式的`获取操作`和`释放操作`\n",
+    "* `获取操作`: 是一种依赖状态的类, 通常会阻塞. 使用锁或信号量时, \"获取\"操作意味着获取的是锁或许可, 并且调用者可能会一直等待直到同步器处于可被获取的状态\n",
+    "* `释放操作`: 释放并不是一个可阻塞的操作, 当执行\"释放\"时, 所有请求时被阻塞的线程都会执行  \n",
     "\n",
+    "#### 2. AQS负责管理同步类中的状态\n",
+    "* 一个类如果想成为一个依赖状态的类, 就必须拥有一些状态. AQS就负责管理同步类中的状态. \n",
+    "* AQS管理一个整数状态的信息, 这个状态可以使用`getState`,`setState`以及`compareAndSet`等protected方法进行操作  \n",
+    "   ```\n",
+    "   例如, ReentrantLock用状态表示所有者线程已经重复获取该锁的次数\n",
+    "       Semaphore用状态表示剩余的许可数量\n",
+    "   ```\n",
+    "  此外, 同步类还可以自己保存一些额外的状态变量.\n",
+    "  ```\n",
+    "  例如, ReentrantLock还保存了所有者线程的信息, 这样就能区分出某个获取动作是重入的还是竞争的\n",
+    "  ```\n",
     "\n",
-    "1. `int tryAcquireShared(int arg)`\n",
-    "2. `boolean tryReleaseShared(int arg)`"
+    "#### 3, 利用AQS实现获取操作\n",
+    "1. 一个获取操作包含两部分: \n",
+    "    * 首先, 同步器判断当前状态是否允许获取操作\n",
+    "        * 如果是, 则允许线程执行   \n",
+    "        * 如果不是, 获取操偶作将阻塞或者失败\n",
+    "\n",
+    "    ```\n",
+    "    例如, 对于锁来说, 如果他没有被某个线程持有, 则能被成功获取\n",
+    "    ```\n",
+    "    * 其次, 更新同步器的状态   \n",
+    "      获取同步器的某个线程可能会对其他线程能否获得同步器造成影响\n",
+    "    ```\n",
+    "    例如, 当获取一个锁后, 锁的状态从\"未被持有\"状变为\"已被持有\"\n",
+    "        从Semophore获取一个许可后, 把剩余许可数量减1 \n",
+    "    ```\n",
+    "    \n",
+    "2. 如何通过AQS实现获取\n",
+    "    * 如果某个同步类支持独占的获取操作, 则应该实现一些方法: \n",
+    "        * `tryAcquire()`\n",
+    "        * `tryRelease()`\n",
+    "        * `isHeldExclusively`等\n",
+    "    * 如果是支持共享获取的同步类, 则应实现:\n",
+    "        * `tryAcquireShared()`\n",
+    "        * `tryReleaseShared()`等方法\n",
+    "\n",
+    "#### 4. ReentrantLock中的AQS同步器\n",
+    "* 因为`ReentrantLock`只支持独占方式的偶去操作, 因此实现了`tryAcquire`和`tryRelease()`\n",
+    "* `Sync`是`ReentrantLock`的内部同步器, 实现了`tryRelease()`; `tryAcquire`根据公平和非公平性的不同在`Sync`的子类`FairSync`和`NonfairSync`中实现\n",
+    "```java\n",
+    "abstract static class Sync extends AbstractQueuedSynchronizer {\n",
+    "      ...\n",
+    "      protected final boolean tryRelease(int releases) {\n",
+    "            int c = getState() - releases;  // 所有者线程重复获取锁的次数\n",
+    "            // 如果释放锁的线程不是锁的持有者线程, 抛异常 (释放操作的第一步: 是否允许释放锁)\n",
+    "            if (Thread.currentThread() != getExclusiveOwnerThread())  \n",
+    "                throw new IllegalMonitorStateException();\n",
+    "            boolean free = false;\n",
+    "            if (c == 0) {\n",
+    "                free = true;\n",
+    "                setExclusiveOwnerThread(null);\n",
+    "            }\n",
+    "            setState(c);  // 释放锁的第二步: 释放同步器的状态\n",
+    "            return free;\n",
+    "        }  \n",
+    "       ...\n",
+    "}\n",
+    "```\n",
+    "```java\n",
+    "static final class FairSync extends Sync {\n",
+    "      ...\n",
+    "      protected final boolean tryAcquire(int acquires) {\n",
+    "        final Thread current = Thread.currentThread();\n",
+    "        int c = getState();\n",
+    "        if (c == 0) {  // 没有线程在持有锁\n",
+    "            if (!hasQueuedPredecessors() &&\n",
+    "                compareAndSetState(0, acquires)) {\n",
+    "                setExclusiveOwnerThread(current);\n",
+    "                return true;\n",
+    "            }\n",
+    "        }\n",
+    "        // 如果持有锁的线程是当前线程\n",
+    "        else if (current == getExclusiveOwnerThread()) {\n",
+    "            int nextc = c + acquires;\n",
+    "            if (nextc < 0)\n",
+    "                throw new Error(\"Maximum lock count exceeded\");\n",
+    "            setState(nextc);\n",
+    "            return true;\n",
+    "        }\n",
+    "        // 持有锁的线程不是当前线程\n",
+    "        return false;\n",
+    "      }\n",
+    "     ...\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "#### 5. AbstractQueuedSynchronizer如何实现\n",
+    "* 首先, `AbstractQueuedSynchronizer` 内部有一个FIFO的等待队列. 当某个线程调用了同步器的`acquire(int arg)`时, 如果同步器的状态不满足\"获取成功\", 则该线程会被构造成`Node`对象插入到同步器的等待队列中.`AbstractQueuedSynchronizer`的`compareAndSetTail()`方法即为等待队列的入队方发(使用`unsafe`的CAS操作插入)\n",
+    "```java\n",
+    "    /**\n",
+    "     * Inserts node into queue, initializing if necessary. See picture above.\n",
+    "     * @param node the node to insert\n",
+    "     * @return node's predecessor\n",
+    "     */\n",
+    "    private Node enq(final Node node) {\n",
+    "        for (;;) {\n",
+    "            Node t = tail;\n",
+    "            if (t == null) { // Must initialize\n",
+    "                if (compareAndSetHead(new Node()))\n",
+    "                    tail = head;\n",
+    "            } else {\n",
+    "                node.prev = t;\n",
+    "                if (compareAndSetTail(t, node)) {\n",
+    "                    t.next = node;\n",
+    "                    return t;\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    /**\n",
+    "     * CAS tail field. Used only by enq.\n",
+    "     */\n",
+    "    private final boolean compareAndSetTail(Node expect, Node update) {\n",
+    "        return unsafe.compareAndSwapObject(this, tailOffset, expect, update);\n",
+    "    }\n",
+    "```"
    ]
   },
   {
