--- a/Java Parallel program/Java并发编程实践/4-并发基础模块.ipynb
+++ b/Java Parallel program/Java并发编程实践/4-并发基础模块.ipynb
@@ -5,26 +5,31 @@
    "metadata": {},
    "source": [
     "### 一. volatile\n",
-    "#### 1. 线程共享变量模型   \n",
-    "1. Java中, 每个线程都有自己独立的执行内存空间.   \n",
-    "2. 当线程需要存取一个共享变量时, 要先获取锁定, 并从主内存拷贝共享变量到自己的线程执行空间里  \n",
-    "当线程操作完这个变量后, 释放锁并将结果写会主内存  \n",
-    "\n",
-    "#### 2. 线程安全问题  \n",
-    "假设一个线程从共享内存中拷贝了共享变量后释放了锁, 而后线程内部操作该变量. 此时, 有另一个线程又从主内存拷贝共享变量, 这个新线程拷贝的结果会是上一个线程没做出修改之前的值, 从而产生安全问题  \n",
-    "\n",
-    "#### 3. `volatile`关键字  \n",
-    "volatile关键字声明的变量可以做到如下保证 :  \n",
-    "1. 其他线程对共享变量的修改, 可以即时反应在当前线程中  \n",
-    "2. 确保当前线程对volatile变量的修改, 能即时写回到 共享主内存中, 并被其他线程看见  \n",
-    "3. volatile声明的变量, 将破事所有线程均读写主内存中的变量值, 从而使得volatile变量在多线程间可见  \n",
-    "\n",
-    "#### 4. -server模式  \n",
-    "java在'-server'模式下, JVM不回去读取未发生变化且未标记为volatile的共享变量, 使得变量的修改在线程之间是不可见的\n",
-    "\n",
-    "#### 5. volatile与指令重拍  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;编译器以及CPU为了优化代码执行的效率, 可能会使得本来在代码上发生的先执行a再执行b, 优化后变成先执行b再执行a; 这在单线程程序中不会发生异常, 但是在多线程环境中可能破坏了操作之间的happens-before限制, 导致发生位置问题.  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;使用volatile关键字后, 除了提供内存可见性语义, 还会避免volatile附近的代码发生指令重排序, 使得线程安全; volatile的缺点是变量只会存在内存中, 而不会进入寄存器等不可见地方, 一定程度上降低读写效率"
+    "#### 1. volatile的语义\n",
+    "Java内存模型对volatile关键字定义了一些特殊规则. 首先从volatile的语义开始说起, 再得出Java内存模型对volatile设定的几个规则\n",
+    "* **语义**\n",
+    "    1. 禁止volatile代码附近指令重排  \n",
+    "       * 何为指令重拍: 普通变量只能保证在依赖其他变量的结果进行计算时可以获得正确结果, 但不能保证变量的赋值顺序和代码中的顺序一致. 这也是满足了Java内存模型中\"线程内部表现为串行\"的语义.   \n",
+    "       * 指令重拍是机器级的优化, CPU往往会把赋值操作的语句和不依赖该变量的计算语句不按照代码顺序执行, 这是提高CPU执行效率的一种手段. 比如:\n",
+    "       ```\n",
+    "       MEM阶段访问的数据不在cache中，需要从外部存储器获取，这个动作需要几十个cycle，如果顺序执行，后面的指令MEM都要等待这个指令操作完成。乱序执行是说，先执行后面不依赖该数据的指令\n",
+    "       a = 0; b = 0; a = a + 1; b = b + 1\n",
+    "       上面4行代码的执行顺序可能变为\n",
+    "       a = 0; a = a + 1; b = 0; b = b + 1(避免寄存器对变量a和变量b之间反复切换, 增大内存取值花费的时钟周期)\n",
+    "       ```\n",
+    "       * volatile如何避免指令重拍?  \n",
+    "         当变量被volatile修饰后, 转换后的汇编代码会在赋值语句后面加上一个内存屏障, 在CPU指令重拍时, 不能能把后面的指令重排序到内存屏障之前\n",
+    "    2. 保证volatile修饰的变量的可见性   \n",
+    "       * 前面提到, 被volatile修饰的变量, 转换成汇编代码后会在复制操作后加上内存屏障, 避免指令重拍. 该内存屏障还有一个作用是: 如果某个变量被多个CPU缓存在cache中, 当本CPU的cache写入内存时, 该写入动作也会导致其它CPU无效化其cache, 使得其它CPU再次使用到该变量时只能从内存中重新取值. 相当于其它CPU总能使用该变量的新值\n",
+    "       \n",
+    "       \n",
+    "* **Java内存模型对volatile关键字的特殊规则**\n",
+    "    1. 要求在工作内存中, 每次使用变量前都必须从主内存刷新最新的值, 保证能看见其他线程对该变量修改后的值\n",
+    "    2. 每次修改变量后, 都要立刻同步回主内存, 保证其它线程可以看见自己对该变量的修改  \n",
+    "    3. 要求volatile修饰的变量不会被指令重拍优化, 保证执行顺序与代码的书写顺序一致  \n",
+    "    \n",
+    "#### 2. 对long和double类型变量的特殊规则\n",
+    "JVM允许将未被volatile修饰的64位数据类型的读写操作, 划分为两次32位的操作来执行. 如果多个线程共享一个未被声明成volatile的long或double类型的变量, 并同时对他进行读取和修改, 则可能会读到一个既非原值, 也不是其它线程修改后的值的\"半个变量\". 不过这种\"读到半个变量\"的情况已经十分罕见, 因为商用虚拟机几乎都会把64位数据的读写操作作为原子操作, 因此在编写代码时一般不需要把long和double变量专门声明为volatile  "
    ]
   },
   {
@@ -87,6 +92,84 @@
     " 3. `Thread.sleep`    \n",
     "  sleep方法会让线程休眠, 但不会释放已获得的锁 "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 三. Java内存模型\n",
+    "\n",
+    "#### 1. 什么是Java内存模型\n",
+    "Java内存模型(Java Memory Model), 是用来**屏蔽各种硬件和操作系统内存访问差异**, 实现**让Java程序在各种平台下都能达到一致的内存访问效果**的模型; 其主要目标是\"定义程序中变量的访问规则\", 即2个内存访问细节:`将变量存储到内存`和`从内存中取出变量`  \n",
+    "1. 这里的\"变量\"  \n",
+    "  此处的变量与Java程序中所说的变量有所不同, 它专指`实例的字段`,`静态字段`,`数组中的元素`, 它不包括\"局部变量\"与\"方法参数\". 因为后者是线程私有的, 不会被共享也就不会存在竞争的问题  \n",
+    "  \n",
+    "2. JMM没有做出的限制  \n",
+    "  为了获得较好的执行效能, Java内存模型没有限制: \n",
+    "    * 执行引擎使用cpu中特定寄存器或特定缓存来和主内存交互  \n",
+    "    * 也没有限制JIT不能调整代码执行顺序这类优化措施\n",
+    "    \n",
+    "3. 什么是主内存, 什么是工作内存  \n",
+    "Java内存模型规定所有变量都存储在`主内存`中, 此外每个线程还有自己的工作内存. \n",
+    "    * 线程的工作内存中保存了被线程使用的变量的主内存副本拷贝; \n",
+    "    * 线程对变量的所有操作都是在工作内存中执行的, 线程不能直接读写主内存的变量\n",
+    "    * 线程间, 变量值得传递需要通过主内存来完成.\n",
+    "    \n",
+    " 这里的主内存和工作内存是对物理内存,CPU cache, 寄存器的一种抽象, 有别于Java内存区域中的\"堆\",\"栈\",\"方法区\". 二者不是同一层次的内存划分, 基本没有关系. 如果要勉强对应起来, 那从变量, 主内存, 工作内存的定义来看:\n",
+    "    * 主内存对应Java堆中对象实例的数据部分  \n",
+    "      (对象实例还包括hash码, GC标志, GC年龄, 同步锁等信息)\n",
+    "    * 工作内存对应栈的部分区域\n",
+    "    \n",
+    " 从更底层上说:\n",
+    "    * 主内存对应物理内存\n",
+    "    * 而工作内存往往对应于于寄存器和CPU高速缓存. 因为程序运行时往往访问的是工作内存的变量, 虚拟机会优先把这些变量拷贝到cache或寄存器中\n",
+    "\n",
+    "#### 2. 主内存与工作内存的互相操作\n",
+    "Jvm规定了8种操作, 用来实现主内存和工作内存之间相互拷贝的实现细节. 这8种操作都是原子的, 不可再分的. (对于long和double类型的变量可能有例外)    \n",
+    "1. 作用于主**内存**的操作    \n",
+    "    * `lock`: 将主内存中的变量标识为, \"已被一条线程独占\"的状态  \n",
+    "    * `unlock`: 将主内存中处于\"lock\"状态的变量释放出来, 释放以后该变量才能被其他线程\"lock\"\n",
+    "    * `read`: 将变量的值, 从主内存传输到工作内存中, 以便后续执行`load`动作\n",
+    "    * `load`: 把从主内存拷贝过来的变量值, 赋给工作内存的变量副本  \n",
+    "\n",
+    "2. 作用于**工作内存**的操作  \n",
+    "    * `use`: 把工作内存中, 某个变量的值传递给执行引擎. 每当jvm遇到一个需要用到变量值的字节码指令时就会去执行该动作\n",
+    "    * `assign`: 把从执行引擎收到的值, 赋给工作内存中的某个变量. 每当jvm遇到一个给变量赋值的字节码指令时就会去执行该动作  \n",
+    "    * `store`: 将工作内存中某个变量的值传递到主内存, 以便后续执行`write`动作\n",
+    "    * `write`: 把从工作内存传递过来的某个值赋给主内存的某个变量  \n",
+    "\n",
+    "因此Java内存模型的主要规则是:\n",
+    "```\n",
+    "如果要把主内存中某个变量的值拷贝到工作内存, 则顺序执行`read`和`load`动作; \n",
+    "如果要把工作内存中某个变量副本的值写回到主内存, 则顺序执行`store`和`write`动作\n",
+    "```\n",
+    "Java内存模型, 只要求以上2个操作是顺序执行的, 而不保证是连续执行的. 也就是说. `read`和`load`之间, `store`和`write`之间可以插入其他指令. 一种多线程下可能会导致歧义的顺序是:  \n",
+    "```\n",
+    "read a, read b, load b, load a\n",
+    "```\n",
+    "\n",
+    "3. Jvm还规定了, 以上8种操作必须必须满足如下规则  \n",
+    "    1. `read`和`load`, 以及`store`和`write`, 必须成对出现.   \n",
+    "      即不允许某个变量从主内存读取了但工作内存不接受, 或者从主内存发起了写回但主内存不接受写回的情况  \n",
+    "    2. 不允许线程丢弃某个变量最近assign后的值  \n",
+    "       即不允许某个变量在工作内存中改变以后没有同步回主存\n",
+    "    3. 不允许一个线程把某个未发生任何`assign`操作的变量同步回主存  \n",
+    "    4. 新的变量只能诞生在主存中, 不允许工作内存使用一个未被初始化的变量. 换句话说就是, 要想对一个变量执行`use(执行引擎拷贝工作内存的某个值)`和`store(主内存拷贝工作内存的某个值)`操作, 必须先在该变量上执行`assign(执行引擎拷贝到工作内存)`和`load(主内存拷贝到工作内存)`  \n",
+    "    5. 同一时刻, 某个变量只允许一个线程对其`lock`, 但可以被同一个线程多次`lock`. 多次执行`lock`后, 只有执行相同次数的`unlock`, 该变量才会被解锁  \n",
+    "    6. 如果要对一个变量`lock`, 则必须先清空该变量在工作内存的值, 在执行引擎使用该变量前, 需要重新执行`load`和`assign`操作在工作内存中初始化该变量  \n",
+    "    7. 如果一个变量没有被`lock`过, 则不允许被`unlock`; 一个线程不能去`unlock`一个被其它线程`lock`的变量\n",
+    "    8. 一个变量在执行`unlock`之前, 必须先把该变量同步会主内存(即执行`store`,`write`操作)  \n",
+    "    \n",
+    "  这8个规则再加上后面的`volatile特殊规则`, 就完全确定了Java程序中哪些内存访问动作在并发下时安全的  \n",
+    "      \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
